--- a/public/name.html
+++ b/public/name.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" contensecot="width=device-width, initial-scale=1.0" />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
     <meta name="theme-color" content="#ff3131" />
     <title>QuikKirana | Inventory Management & Billing App</title>
@@ -210,13 +210,15 @@
               <span class="dot active" id="activedot"></span>
               <span class="dot"></span>
             </div>
-            <button id="submitBtn">Next  <i class="fa-solid fa-arrow-right-long"></i></button>
+            <button id="submitBtn">
+              Next <i class="fa-solid fa-arrow-right-long"></i>
+            </button>
             <label id="team">Made with ❤️ by TeamInnov4tors</label>
           </div>
         </div>
       </div>
     </div>
-<!-- 
+    <!-- 
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
@@ -234,7 +236,10 @@
         });
       }
     </script> -->
-    <script src="https://kit.fontawesome.com/5274d0405c.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/5274d0405c.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
