--- a/public/name.html
+++ b/public/name.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" contensecot="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="manifest" href="/manifest.json" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ff3131" />
     <title>QuikKirana | Inventory Management & Billing App</title>
     <link rel="icon" href="logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="style.css" /> <!-- Link to common styles if applicable -->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
@@ -14,7 +14,7 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: "Poppins", sans-serif; /* Ensure the font is applied correctly */
+        font-family: "Poppins", sans-serif;
       }
 
       body {
@@ -60,11 +60,11 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        border-radius: 30px 30px 0 0; /* Rounded top corners */
+        border-radius: 30px 30px 0 0;
         padding: 20px;
         display: flex;
         justify-content: center;
-        z-index: 2; /* Ensure it is above the front image */
+        z-index: 2;
       }
 
       .page1section2inner {
@@ -131,21 +131,23 @@
         width: auto;
         height: 370px;
       }
+
       /* Responsive Styles */
       @media (max-width: 600px) {
         .page1section1 {
-          margin-top: 70px; /* Reduced margin for smaller screens */
+          margin-top: 70px;
         }
 
         .page1section2 {
-          top: auto; /* Default position remains bottom */
-          padding: 10px; /* Adjust padding for smaller screens */
+          top: auto;
+          padding: 10px;
         }
 
         .page1section2inner button {
-          margin-top: 30px; /* Reduced button margin for smaller screens */
+          margin-top: 30px;
         }
       }
+
       /* Process indicator with 3 dots */
       .progress-indicator {
         display: flex;
@@ -157,17 +159,17 @@
         width: 10px;
         height: 10px;
         margin: 0 5px;
-        background-color: grey; /* Default inactive color */
+        background-color: grey;
         border-radius: 50%;
         display: inline-block;
-        opacity: 0.5; /* Slightly faded for inactive state */
+        opacity: 0.5;
         transition: background-color 0.3s, opacity 0.3s ease-in-out;
       }
 
       /* Active dot styles */
       #activedot {
-        background-color: red; /* Active dot color */
-        opacity: 1; /* Full opacity for active */
+        background-color: red;
+        opacity: 1;
       }
 
       /* Animation remains for visual effect */
@@ -178,7 +180,7 @@
           transform: scale(1);
         }
         40% {
-          transform: scale(1.3); /* Bounce size increase */
+          transform: scale(1.3);
         }
       }
     </style>
@@ -188,14 +190,11 @@
       <div class="page1">
         <div class="page1section1">
           <img src="whitelogo.png" id="whitelogo" />
-          <!-- Updated slogan -->
           <p class="slogan">Your Personalized Inventory<br />Assistant</p>
-          <!-- Changed image to secondpageimg.png -->
           <img src="secondpageimg.png" id="secondpageimg" />
         </div>
         <div class="page1section2">
           <div class="page1section2inner">
-            <!-- Changed label to 'User Name' and input type to 'text' -->
             <label>User Name</label>
             <input
               type="text"
@@ -218,28 +217,7 @@
         </div>
       </div>
     </div>
-    <!-- 
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker
-            .register("/service-worker.js")
-            .then((registration) => {
-              console.log(
-                "Service Worker registered with scope:",
-                registration.scope
-              );
-            })
-            .catch((error) => {
-              console.log("Service Worker registration failed:", error);
-            });
-        });
-      }
-    </script> -->
-    <script
-      src="https://kit.fontawesome.com/5274d0405c.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/5274d0405c.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </body>
 </html>
