--- a/public/name.html
+++ b/public/name.html
@@ -228,7 +228,7 @@
         <div class="page1section1">
           <img src="whitelogo.png" id="whitelogo" />
           <p class="slogan">Your Personalized Inventory<br />Assistant</p>
-          <img src="secondpageimg.png" id="secondpageimg" />
+          <img src="images/secondpageimg.png" id="secondpageimg" />
         </div>
         <div class="page1section2">
           <div class="page1section2inner">
