--- a/public/shopname.html
+++ b/public/shopname.html
@@ -197,7 +197,7 @@
           <p class="slogan">
             Your Shop, Your Rules<br />Manage it Effortlessly!
           </p>
-          <img src="thirdpageimg.png" id="secondpageimg" />
+          <img src="images/thirdpageimg.png" id="secondpageimg" />
         </div>
         <div class="page1section2">
           <div class="page1section2inner">
