--- a/public/name.html
+++ b/public/name.html
@@ -129,7 +129,8 @@
         background-color: white;
         border-radius: 50%;
         width: auto;
-        height: 370px;
+        height: 350px;
+        z-index: -99;
       }
 
       /* Responsive Styles */
@@ -228,7 +229,7 @@
         <div class="page1section1">
           <img src="whitelogo.png" id="whitelogo" />
           <p class="slogan">Your Personalized Inventory<br />Assistant</p>
-          <img src="images/secondpageimg.png" id="secondpageimg" />
+          <img src="secondpageimg.png" id="secondpageimg" />
         </div>
         <div class="page1section2">
           <div class="page1section2inner">
