--- a/public/shopname.html
+++ b/public/shopname.html
@@ -128,7 +128,8 @@
 
       #secondpageimg {
         width: auto;
-        height: 370px;
+        height: 350px;
+        z-index:1;
       }
 
       /* Responsive Styles */
