--- a/public/shopname.html
+++ b/public/shopname.html
@@ -84,7 +84,7 @@
       .page1section2inner input {
         height: 50px;
         width: 100%;
-        background-color: #f3f2f2;
+        background-color: #ffffff;
         outline: none;
         border: none;
         border-radius: 8px;
@@ -129,7 +129,7 @@
       #secondpageimg {
         width: auto;
         height: 350px;
-        z-index:1;
+        z-index: 1;
       }
 
       /* Responsive Styles */
@@ -198,7 +198,7 @@
           <p class="slogan">
             Your Shop, Your Rules<br />Manage it Effortlessly!
           </p>
-          <img src="images/thirdpageimg.png" id="secondpageimg" />
+          <img src="thirdpageimg.png" id="secondpageimg" />
         </div>
         <div class="page1section2">
           <div class="page1section2inner">
