--- a/public/name.html
+++ b/public/name.html
@@ -206,7 +206,7 @@
         border-radius: 50%;
         width: 60px;
         height: 60px;
-        animation: spin 1s linear infinite;
+        animation: spin 2s linear infinite;
       }
 
       @keyframes spin {
@@ -229,7 +229,7 @@
         <div class="page1section1">
           <img src="whitelogo.png" id="whitelogo" />
           <p class="slogan">Your Personalized Inventory<br />Assistant</p>
-          <img src="secondpageimg.png" id="secondpageimg" />
+          <img src="images/secondpageimg.png" id="secondpageimg" />
         </div>
         <div class="page1section2">
           <div class="page1section2inner">
