--- a/public/name.html
+++ b/public/name.html
@@ -36,6 +36,7 @@
         display: flex;
         flex-direction: column;
         position: relative;
+        justify-content: space-between;
       }
 
       .page1section1 {
@@ -141,6 +142,7 @@
 
         .page1section2 {
           top: auto;
+          margin-top: auto;
           padding: 10px;
         }
 
@@ -229,7 +231,7 @@
         <div class="page1section1">
           <img src="whitelogo.png" id="whitelogo" />
           <p class="slogan">Your Personalized Inventory<br />Assistant</p>
-          <img src="images/secondpageimg.png" id="secondpageimg" />
+          <img src="secondpageimg.png" id="secondpageimg" />
         </div>
         <div class="page1section2">
           <div class="page1section2inner">
