--- a/public/name.html
+++ b/public/name.html
@@ -144,6 +144,7 @@
           top: auto;
           margin-top: auto;
           padding: 10px;
+          z-index:999;
         }
 
         .page1section2inner button {
