--- a/public/shopname.html
+++ b/public/shopname.html
@@ -119,7 +119,7 @@
         padding: 20px;
         display: flex;
         justify-content: center;
-        z-index: 9999;
+        z-index: 2;
       }
 
       .page1section2inner {
@@ -195,7 +195,6 @@
 
         .page1section2 {
           padding: 10px;
-          z-index:9999;
         }
 
         .page1section2inner button {
@@ -283,7 +282,7 @@
               <span class="dot"></span>
               <span class="dot active" id="thirdactivedot"></span>
             </div>
-            <button id="submitBtn">
+            <button id="submitBtn" onclick="goToLoadingPage()">
               Next <i class="fa-solid fa-arrow-right-long"></i>
             </button>
           </div>
@@ -320,6 +319,16 @@
         }
       });
 
+      function goToLoadingPage() {
+      var shopName = document.getElementById("shopname").value;
+      if (shopName.trim() !== "") {
+        // Redirect to the loading page
+        window.location.href = "aftersigninloading.html";
+      } else {
+        alert("Please enter a shop name.");
+      }
+    }
+    
       const fileInput = document.getElementById("fileInput");
       const profilePicture = document.getElementById("profilePicture");
       const uploadText = document.getElementById("uploadText");
