--- a/public/aftersigninloading.html
+++ b/public/aftersigninloading.html
@@ -54,12 +54,12 @@
       <div class="loader">
         <img src="images/Grocery cart Loader.gif" alt="Loading..." />
         <div class="loading-text" id="loading-text">
-          Getting Your Dashboard Ready 💻
+        💻 Getting Your Dashboard Ready
         </div>
       </div>
     </div>
     <script>
-      let loadingTexts = ["Almost there! ⏳", "Please wait..🔄"];
+      let loadingTexts = ["⏳ Almost there!", "🔄 Please wait.."];
       let currentIndex = 0;
 
       window.onload = function () {
