--- a/public/name.html
+++ b/public/name.html
@@ -146,6 +146,7 @@
         .page1section2 {
           top: auto;
           padding: 10px;
+          min-height: 330px;
         }
 
         .page1section2inner button {
